# pomorode-gtk4

./: meson.build
data/ui/: preferences.ui  window.ui
po/: POTFILES.in
src/: application.vala  config.vala.in  main.vala  meson.build  window.vala
